first protocol small changes in title page

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -7,8 +7,10 @@ TODO: Blablabla, alles wichtig und ganz toll
 
 \subsubsection{Ereignistabelle}
 %wenn die Tabellen zu lang werden -> longtable
-TODO:
-\begin{tabular}[ht]{|l|l|l|l|}
+(M = Mitarbeiter, A = Administrator)
+
+TODO:\\
+\begin{tabular}[ht]{|c|p{10em}|l|l|}
 \hline
 Nr & Ereignis & Datenfluß im System & Antwort des Systems \\
 \hline\hline
