--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -1,9 +1,13 @@
-\documentclass[a4paper,11pt,twoside]{scrreprt}
+\documentclass[a4paper,twoside]{scrreprt}
 
-\usepackage{txfonts}
-\usepackage{graphicx}
-\usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{pslatex}
+\usepackage{amssymb}
+\usepackage{textcomp}
+\usepackage{parskip}
+\usepackage{graphicx}
+\usepackage{txfonts}
 \usepackage[T1]{fontenc}
 \usepackage{user} % eigene Befehle
 
@@ -18,7 +22,7 @@
 
 \begin{document}
 \include{titel} % Titel des Dokuments mit Informationen aus meta
-
+\cleardoublepage
 % nur zum arbeiten
 \tableofcontents
 
