removed extension from \includegraphics[..]{kontextdiagramm}

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -38,7 +38,7 @@ Nr & Ereignis & Datenfluß im System & Antwort des Systems \\
 \subsubsection{Kontextdiagramm}
 
 %\includegraphics[scale=0.5]{kontextdiagramm}
-\centerline{\includegraphics[scale=0.5]{kontextdiagramm.png}}
+\centerline{\includegraphics[scale=0.5]{kontextdiagramm}}
 
 \subsection{Verhaltensmodell}
 \subsubsection{Grobes Verhaltensmodell (vergröbertes primäres Verhaltensmodell)}
