--- a/trunk/docs/beleg1/titel.tex
+++ b/trunk/docs/beleg1/titel.tex
@@ -2,7 +2,9 @@
 % Autoren wie in Vorlage hinbekommt, bitte ändern
 
 \begin{titlepage}
-	\begin{center}
+	\begin{center}\sffamily
+		\vspace{15mm}
+		\includegraphics{tuclogo}
 		\vfill
 		{% Kopf des Titels
 			\large Softwarepraktikum 2006\\[1.5ex]
