Added extra files for pspec + templates for the different processes Updated visio files (forgot to split bibtex process and delete some stuff) Added tuclogo.eps for dvi/ps output (can somebody make that thing black?)

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -30,6 +30,7 @@ Nr & Ereignis & Datenfluß im System & Antwort des Systems \\
 14.& A ruft Mitglieder ab & - & Mitgliederliste \\\hline
 \end{tabular}
 
+\newpage % Viele Bilder so skaliert, dass sie ordentlich auf A4-Seiten passen
 \subsubsection{Kontextdiagramm}
 
 %\includegraphics[scale=0.5]{kontextdiagramm}
@@ -43,15 +44,14 @@ Nr & Ereignis & Datenfluß im System & Antwort des Systems \\
 \paragraph{Teilmodell BibTeX}
 \includegraphics[scale=1.0]{teilmodell_bibtex}
 
-
 \paragraph{Teilmodell Buchinformation}
 \includegraphics[scale=1.0]{teilmodell_buchinformation}
 
 \paragraph{Teilmodell Buchverwaltung}
-\includegraphics[scale=0.85]{teilmodell_buchverwaltung}
+\includegraphics[scale=0.93]{teilmodell_buchverwaltung}
 
 \paragraph{Teilmodell Kommentarverwaltung}
-\includegraphics[scale=0.85]{teilmodell_kommentarverwaltung}
+\includegraphics[scale=0.93]{teilmodell_kommentarverwaltung}
 
 \paragraph{Teilmodell Mitgliederverwaltung}
 \includegraphics[scale=0.85]{teilmodell_mitgliederverwaltung}
@@ -129,11 +129,11 @@ TODO:
 %\includegraphics[scale=0.5]{erd}
 
 \subsubsection{Prozessspezifikation}
-TODO: (siehe Beispielbeleg S. 9)
-
-\paragraph{Prozess abc}
-
-\paragraph{Prozess cde}
+\input{pspec_bibtex}
+\input{pspec_buchinformation}
+\input{pspec_buchverwaltung}
+\input{pspec_kommentarverwaltung}
+\input{pspec_mitgliederverwaltung}
 
 \subsection{Definition der Nutzerschnittstelle}
 TODO (Generell, Fargestaltung)
