--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -27,10 +27,10 @@
 \tableofcontents
 
 %Kapitel
-\include{funktionelle_anforderungen}
-\include{operationelle_anforderungen}
-\include{qualitaetsanforderungen}
-\include{basismaschine_umgebung}
-\include{planung}
+\input{funktionelle_anforderungen}
+\input{operationelle_anforderungen}
+\input{qualitaetsanforderungen}
+\input{basismaschine_umgebung}
+\input{planung}
 
 \end{document}
