--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -10,6 +10,7 @@
 \usepackage{txfonts}
 \usepackage[T1]{fontenc}
 \usepackage{user} % eigene Befehle
+\usepackage{longtable}
 
 \ifpdf
   \usepackage[ps2pdf]{thumbpdf}
