- basismaschine - produktbeschreibung (entwurf?)

--- a/trunk/docs/beleg1/basismaschine_umgebung.tex
+++ b/trunk/docs/beleg1/basismaschine_umgebung.tex
@@ -1,21 +1,47 @@
 \chapter{Basismaschine und Entwicklungsumgebung}
 \section{Basismaschine}
 \subsection{Hardwarekonfiguration}
-TODO siehe Beispielbeleg S. 25\\
-Als notwendige Minimalausstattung des für den Betrieb des Systems erforderlichen PCs werden angesehen:
+F"ur {\bf Webserver} wird folgende Ausstattung ben"otigt:
 \begin{itemize}
- \item Basis-PC
- \item Nadeldrucker
+ \item Server (Monitor)
+ \item Breitband-Netzwerk (z.B. SDSL, Ethernet)
+ \item 5 MB Festplattenspeicher
 \end{itemize}
+Als notwendige Minimalausstattung des für den {\bf Nutzer-PC} wird vorgeschlagen:
+\begin{itemize}
+ \item Basis-PC (Tastatur, Maus, 15" Farbmonitor)
+ \item Netzwerk (z.B. Modem, Ethernet)
+\end{itemize}
+Da die Nutzung des Systems komplett Serverseitig funktioniert wird auf dem Nutzer-PC kein Festplattenspeicher verbraucht, da die
+Bedienung komplett "uber den Webbrowser erfolgt. Eine schnelle CPU und eine breitbandige Netzwerkverbindung
+kann den Arbeitskomfort zus"atzlich verbessern.
 
 
 \subsection{Betriebssystem}
-TODO siehe Beispielbeleg S. 25
-
+Webserver:
+\begin{itemize}
+\item Unix oder Unix-kompatibel
+\end{itemize}
+Nutzer-PC:
+\begin{itemize}
+\item Windows ab Windows 95
+\item Linux oder Unix-kompatibel
+\item MacOS
+\item PalmOS
+\end{itemize}
 
 \subsection{Sonstige Basissoftware}
-TODO siehe Beispielbeleg S. 25
+Webserver:
+\begin{itemize}
+\item MySQL 5.0
+\item Apache 2.0
+\item PHP 5.1
+\end{itemize}
+Nutzer-PC:
+\begin{itemize}
+\item Webbrowser, z.B. Firefox, Konqueror, Opera, Internet Explorer
+\end{itemize}
 
 
 \section{Entwicklungsumgebung}
-TODO siehe Beispielbeleg S. 26
+Es wird ein normaler Texteditor verwendet (z.b. vim, emacs).
