--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -1,6 +1,19 @@
 \chapter{Spezifikation der funktionellen Anforderungen}
 \section{Produktbeschreibung}
-TODO: Blablabla, alles wichtig und ganz toll
+Das Literaturverwaltungssystem LiMan unterst"utzt Autoren bei
+ihrer Recherche durch ein intuitives Suchsystem. "Uber eine einfach
+gehaltene Oberfl"ache werden alle Nutzungs- und Administrationsvorg"ange
+abgewickelt. Durch das Websystem ist der Nutzer unabh"angig von Betriebssystem 
+und Position.
+\subsubsection{Nutzungsumgebung}
+Das System wird auf einem Webserver im Intranet oder 
+Internet installiert, w"ahrend die Nutzer von ihren PCs mit
+einem Webbrowser darauf zugreifen.
+\subsubsection{Nutzergruppe}
+Es gibt 3 Nutzerebenen. Leser k"onnen suchen und recherchieren,
+registrierte Nutzer d"urfen B"ucher hinzufuegen und kommentieren, und Administratoren
+d"urfen ausserdem noch Nutzer verwalten.
+
 
 \section{Funktionelle Anforderungen}
 \subsection{Umgebungsmodell}
@@ -169,7 +182,8 @@ TODO:
 TODO (Generell, Fargestaltung)
 
 \subsubsection{Ein- und Ausgabegeräte}
-TODO Siehe Beispielbeleg S. 11
+F"ur die Eingabe wird ein vernetzter PC mit Tastatur und Maus vorrausgesetzt.\\
+Die Ausgabe erfolgt stets "uber einen Farbmonitor.
 
 \paragraph{Legende zur Layoutdarstellung}
 TODO Siehe Beispielbeleg S. 11
