- keine Nummern in der subsubsection :)

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -5,11 +5,11 @@ ihrer Recherche durch ein intuitives Suchsystem. "Uber eine einfach
 gehaltene Oberfl"ache werden alle Nutzungs- und Administrationsvorg"ange
 abgewickelt. Durch das Websystem ist der Nutzer unabh"angig von Betriebssystem 
 und Position.
-\subsubsection{Nutzungsumgebung}
+\subsubsection*{Nutzungsumgebung}
 Das System wird auf einem Webserver im Intranet oder 
 Internet installiert, w"ahrend die Nutzer von ihren PCs mit
 einem Webbrowser darauf zugreifen.
-\subsubsection{Nutzergruppe}
+\subsubsection*{Nutzergruppe}
 Es gibt 3 Nutzerebenen. Leser k"onnen suchen und recherchieren,
 registrierte Nutzer d"urfen B"ucher hinzufuegen und kommentieren, und Administratoren
 d"urfen ausserdem noch Nutzer verwalten.
