--- a/trunk/docs/beleg1/basismaschine_umgebung.tex
+++ b/trunk/docs/beleg1/basismaschine_umgebung.tex
@@ -4,13 +4,13 @@
 F"ur {\bf Webserver} wird folgende Ausstattung ben"otigt:
 \begin{itemize}
  \item Server (Monitor)
- \item Breitband-Netzwerk (z.B. SDSL, Ethernet)
+ \item Breitband-Netzwerk (z. B. SDSL, Ethernet)
  \item 5 MB Festplattenspeicher
 \end{itemize}
 Als notwendige Minimalausstattung des für den {\bf Nutzer-PC} wird vorgeschlagen:
 \begin{itemize}
  \item Basis-PC (Tastatur, Maus, 15" Farbmonitor)
- \item Netzwerk (z.B. Modem, Ethernet)
+ \item Netzwerk (z. B. Modem, Ethernet)
 \end{itemize}
 Da die Nutzung des Systems komplett Serverseitig funktioniert wird auf dem Nutzer-PC kein Festplattenspeicher verbraucht, da die
 Bedienung komplett "uber den Webbrowser erfolgt. Eine schnelle CPU und eine breitbandige Netzwerkverbindung
@@ -39,9 +39,9 @@ Webserver:
 \end{itemize}
 Nutzer-PC:
 \begin{itemize}
-\item Webbrowser, z.B. Firefox, Konqueror, Opera, Internet Explorer
+\item Webbrowser, z. B. Firefox, Konqueror, Opera, Internet Explorer
 \end{itemize}
 
 
 \section{Entwicklungsumgebung}
-Es wird ein normaler Texteditor verwendet (z.b. vim, emacs).
+Es wird ein normaler Texteditor verwendet (z. B. vim, emacs).
