--- a/trunk/docs/beleg1/pspec_literaturinformation.tex
+++ b/trunk/docs/beleg1/pspec_literaturinformation.tex
@@ -1,7 +1,7 @@
-% Buch_anzeigen
-\paragraph{Buch\_anzeigen}
+% Literatur_anzeigen
+\paragraph{Literatur\_anzeigen}
 \begin{tabular}[t]{p{9.5cm}ll}
-\textbf{Prozess}: Buch\_anzeigen  	&\textbf{Datum}:      &21.04.2006\\
+\textbf{Prozess}: Literatur\_anzeigen  	&\textbf{Datum}:      &21.04.2006\\
 					&\textbf{Bearbeiter}: &TODO\\
 \end{tabular}
 
@@ -13,15 +13,15 @@
 \hrulefill
 
 
-% Buch_suchen
-\paragraph{Buch\_suchen}
+% Literatur_suchen
+\paragraph{Literatur\_suchen}
 \begin{tabular}[t]{p{9.5cm}ll}
-\textbf{Prozess}: Buch\_suchen  	&\textbf{Datum}:      &21.04.2006\\
+\textbf{Prozess}: Literatur\_suchen  	&\textbf{Datum}:      &21.04.2006\\
 					&\textbf{Bearbeiter}: &TODO\\
 \end{tabular}
 
 \hrulefill\\
-\textbf{Voraussetzung}:
+\textbf{Voraussetzung}: -
 \begin{verbatim}
  asdasd
 \end{verbatim}
