Namensanpassung an Nutzergruppentext

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -11,7 +11,7 @@ Internet installiert, w"ahrend die Nutzer von ihren PCs mit
 einem Webbrowser darauf zugreifen.
 \subsubsection*{Nutzergruppe}
 Es gibt 3 Nutzerebenen. Unregistrierte Nutzer k"onnen suchen und recherchieren,
-Mitglieder d"urfen B"ucher hinzufuegen und kommentieren, und Administratoren
+Mitglieder d"urfen Literatur hinzuf"ugen und kommentieren, und Administratoren
 d"urfen ausserdem noch Mitglieder verwalten.
 
 
